# justise

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  go.mod  justfile  main.go  mise.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/logo/: logo.neo
logo/: README.md
src/: main.rs
