[package]
name = "justise"
description = "Bring justice to your mise tasks by converting them to just recipes "
version = "1.6.3"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/badele/justise"
authors = ["Bruno Adelé <brunoadele@gmail.com>"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
